# shopping-agent-demo

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  PRD.md  README.md  frontend_image_enhancement.md  langgraph.json  pyproject.toml
backend/: README.md
backend/api/: main.py
backend/models/: schemas.py
backend/nodes/: extraction_nodes.py  query_nodes.py  question_nodes.py  response_nodes.py  search_nodes.py
backend/prompts/: system_prompts.py
backend/services/: __init__.py  kakao_pay_service.py
backend/tools/: firecrawl_tools.py  scrape.py
backend/utils/: model.py
backend/workflow/: internal_scrape_workflow.py  unified_workflow.py
evaluation/: README.md  __init__.py  analyzer.py  cache_manager.py  config.py  evaluation_runner.py  evaluators.py  inference_runner.py  runner.py
frontend/: README.md  package-lock.json  package.json
frontend/frontend/components/: ProductCard.tsx  ProductImageCarousel.tsx
frontend/frontend/src/components/: Chat.tsx  ImageProcessor.tsx
frontend/src/app/payment/cancel/: page.tsx
frontend/src/app/payment/fail/: page.tsx
frontend/src/app/payment/success/: page.tsx
frontend/src/components/: Chat.tsx
scripts/: run_evaluation.py  setup_evaluation.sh
