[project]
name = "shopping-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "firecrawl-py>=2.16.1",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "langgraph-api>=0.2.98",
    "langgraph-cli>=0.3.5",
    "langgraph-sdk>=0.1.73",
    "langsmith>=0.1.147",
    "pandas>=2.1.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "superclaude>=3.0.0.1",
    "uvicorn>=0.35.0",
]